навигация по якорям

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#accessories">Аксессуары</a>
                 </div>
                 <div>
-                    <a href="#contacts">Восстановление и отцифровка</a>
+                    <a href="#recovery">Восстановление и отцифровка</a>
                     <a href="#contacts">Контакты</a>
                 </div>
             </nav>
@@ -41,12 +41,12 @@
                     <p class="about-us-content-main-text2">
                         Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам - мы сфотографируем вас на документы, проявим фото на настоящей фотобумаге, нанесём изображение на дерево, отцифруем старые видеокассеты, и это ещё не всё!
                     </p>
-                    <a href="" class="services-view">Обзор услуг</a>
+                    <a href="#photo-for-documents" class="services-view">Обзор услуг</a>
                 </div>
                 <img class="about-us-img" src="/source/img/about-us/about-us.png" alt="img" />
             </div>
         </section>
-        <section class="block photo-for-documents">
+        <section class="block photo-for-documents" id="photo-for-documents">
             <div class="block-content">
                 <h2 class="block-content-title">Фото на документы</h2>
                 <p class="block-content-text">
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </section>
-        <section class="block print">
+        <section class="block print" id="print">
             <div class="block-content">
                 <h2 class="block-content-title">Печать и проявка плёнки</h2>
                 <div class="print-content-top">
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </section>
-        <section class="block recovery">
+        <section class="block recovery" id="recovery">
             <div class="block-content">
                 <h3 class="block-content-title">Восстановление и отцифровка</h3>
                 <p class="block-content-text">
@@ -134,7 +134,7 @@
                 <img class="recovery-img" src="/source/img/recovery/recovery.png" alt="img" />
             </div>
         </section>
-        <section class="block polygraphy">
+        <section class="block polygraphy" id="polygraphy">
             <div class="block-content">
                 <h3 class="block-content-title">Полиграфия</h3>
                 <div class="block-cards">
@@ -153,7 +153,7 @@
                 </div>
             </div>
         </section>
-        <section class="block accessories">
+        <section class="block accessories" id="accessories">
             <div class="block-content">
                 <h3 class="block-content-title">Аксессуары</h3>
                 <p class="block-content-text">
@@ -175,7 +175,7 @@
                 </div>
             </div>
         </section>
-        <section class="block contacts">
+        <section class="block contacts" id="contacts">
             <div class="block-content">
                 <h3 class="block-content-title">Контакты</h3>
                 <div class="block-content-text">
