--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                     <a href="#contacts">Контакты</a>
                 </div>
             </nav>
+            <nav class="menu-burger">
+                    <a href="#photo-for-documents">Фото на документы</a>
+                    <a href="#polygraphy">Полиграфия</a>
+                    <a href="#print">Печать фото и проявка плёнки</a>
+                    <a href="#accessories">Аксессуары</a>
+                    <a href="#recovery">Восстановление и отцифровка</a>
+                    <a href="#contacts">Контакты</a>
+            </nav>
             <div class="logo">
                 <p class="title">Фотосалон Фуджи</p>
                 <p>Брянск, Центральный дом быта, 2 этаж</p>
@@ -43,7 +51,7 @@
                     </p>
                     <a href="#photo-for-documents" class="services-view">Обзор услуг</a>
                 </div>
-                <img class="about-us-img" src="/source/img/about-us/about-us.png" alt="img" />
+                <img class="about-us-img" src="source/img/about-us/about-us.png" alt="img" />
             </div>
         </section>
         <section class="block photo-for-documents" id="photo-for-documents">
@@ -54,7 +62,7 @@
                 </p>
                 <div class="block-cards">
                     <div class="photo-for-documents-card">
-                        <img class="photo-for-documents-card-img" src="/source/img/photo-for-documents/pasportRF.png" alt="img" />
+                        <img class="photo-for-documents-card-img" src="source/img/photo-for-documents/pasportRF.png" alt="img" />
                         <div class="photo-for-documents-card-text">
                             <br />
                             <h3>Паспорт РФ</h3>
@@ -62,7 +70,7 @@
                         </div>
                     </div>
                     <div class="photo-for-documents-card">
-                        <img class="photo-for-documents-card-img" src="/source/img/photo-for-documents/zagran.png" alt="img" />
+                        <img class="photo-for-documents-card-img" src="source/img/photo-for-documents/zagran.png" alt="img" />
                         <div class="photo-for-documents-card-text">
                             <h3>Загранпаспорт</h3>
                             <p>
@@ -71,7 +79,7 @@
                         </div>
                     </div>
                     <div class="photo-for-documents-card">
-                        <img class="photo-for-documents-card-img" src="/source/img/photo-for-documents/_3х4.png" alt="img" />
+                        <img class="photo-for-documents-card-img" src="source/img/photo-for-documents/_3х4.png" alt="img" />
                         <div class="photo-for-documents-card-text">
                             <h3>Фото 3x4</h3>
                             <p>
@@ -80,7 +88,7 @@
                         </div>
                     </div>
                     <div class="photo-for-documents-card">
-                        <img class="photo-for-documents-card-img" src="/source/img/photo-for-documents/_4х6.png" alt="img" />
+                        <img class="photo-for-documents-card-img" src="source/img/photo-for-documents/_4х6.png" alt="img" />
                         <div class="photo-for-documents-card-text">
                             <h3>Фото 4x6</h3>
                             <p>
@@ -89,7 +97,7 @@
                         </div>
                     </div>
                     <div class="photo-for-documents-card">
-                        <img class="photo-for-documents-card-img" src="/source/img/photo-for-documents/unknown.png" alt="img" />
+                        <img class="photo-for-documents-card-img" src="source/img/photo-for-documents/unknown.png" alt="img" />
                         <div class="photo-for-documents-card-text">
                             <p>Сделаем фото вашего формата</p>
                         </div>
@@ -105,7 +113,7 @@
                         Фотопечать умерла? - Нет! Всё больше молодёжи приходит к нам за реальными фото, да ещё и с плёнки! Вспомните, как, придя к кому-то в гости, смотрели фотоальбом. Это же целое действо! Приятное занятие, за которым можно провести время с друзьями и близкими.
                     </p>
                     <div class="print-content-top-card">
-                        <img class="print-content-top-card-img" src="/source/img/print/print-machine.png" alt="img" />
+                        <img class="print-content-top-card-img" src="source/img/print/print-machine.png" alt="img" />
                         <div class="print-content-top-card-text">
                             <p>На этой машине мы печатаем фото</p>
                         </div>
@@ -113,7 +121,7 @@
                 </div>
                 <div class="print-content-bottom">
                     <div class="print-content-bottom-card">
-                        <img class="print-content-bottom-card-img" src="/source/img/print/print-machine-photo-born.png" alt="img" />
+                        <img class="print-content-bottom-card-img" src="source/img/print/print-machine-photo-born.png" alt="img" />
                         <div class="print-content-bottom-card-text">
                             <p>Рождение фотографии...</p>
                         </div>
@@ -131,7 +139,7 @@
                 <p class="block-content-text">
                     Восстановим старые фото и отцифруем видеокассеты.
                 </p>
-                <img class="recovery-img" src="/source/img/recovery/recovery.png" alt="img" />
+                <img class="recovery-img" src="source/img/recovery/recovery.png" alt="img" />
             </div>
         </section>
         <section class="block polygraphy" id="polygraphy">
@@ -161,15 +169,15 @@
                 </p>
                 <div class="block-cards">
                     <div class="accessories-card">
-                        <img class="accessories-card-img" src="/source/img/accessories/alboms.png" alt="" />
+                        <img class="accessories-card-img" src="source/img/accessories/alboms.png" alt="" />
                         <p class="accessories-card-text">Альбомы</p>
                     </div>
                     <div class="accessories-card">
-                        <img class="accessories-card-img" src="/source/img/accessories/battaries.png" alt="" />
+                        <img class="accessories-card-img" src="source/img/accessories/battaries.png" alt="" />
                         <p class="accessories-card-text">Батарейки</p>
                     </div>
                     <div class="accessories-card">
-                        <img class="accessories-card-img" src="/source/img/accessories/photoframe.png" alt="" />
+                        <img class="accessories-card-img" src="source/img/accessories/photoframe.png" alt="" />
                         <p class="accessories-card-text">Фоторамки</p>
                     </div>
                 </div>
@@ -181,15 +189,15 @@
                 <div class="block-content-text">
                     <div class="contacts-rows">
                         <div class="contacts-row">
-                            <img class="contacts-img" src="/source/img/contacts/phone.svg" alt="">
+                            <img class="contacts-img" src="source/img/contacts/phone.svg" alt="">
                             <span class="contacts-text">+7 (4832) 66-39-98</span>
                         </div>
                         <div class="contacts-row">
-                            <img class="contacts-img" src="/source/img/contacts/mail.svg" alt="">
+                            <img class="contacts-img" src="source/img/contacts/mail.svg" alt="">
                             <span class="contacts-text">fuji32@bk.ru</span>
                         </div>
                         <div class="contacts-row">
-                            <img class="contacts-img" src="/source/img/contacts/address.png" alt="">
+                            <img class="contacts-img" src="source/img/contacts/address.png" alt="">
                             <span class="contacts-text">г.Брянск пр.Ленина 67, Центральны Дом Быта, 2 этаж</span>
                         </div>
                     </div>
@@ -205,30 +213,30 @@
                 <p class="contacts-text">Дом быта большой... Как найти наш магазин? Держите гайд:</p>
                 <div class="road">
                     <div class="contacts-card">
-                        <img src="/source/img/contacts/step1.png" alt="">
+                        <img src="source/img/contacts/step1.png" alt="">
                         <p class="contacts-card-text">1. Заходим в Дом быта</p>
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">2. Перед Спортландией <br> - налево</p>
 
-                        <img src="/source/img/contacts/step2.png" alt="">
+                        <img src="source/img/contacts/step2.png" alt="">
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">3. Поднимаемся <br>по лестнице</p>
 
-                        <img src="/source/img/contacts/step3.png" alt="">
+                        <img src="source/img/contacts/step3.png" alt="">
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">4. Идём к коридору</p>
-                        <img src="/source/img/contacts/step4.png" alt="">
+                        <img src="source/img/contacts/step4.png" alt="">
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">5. Проходим коридор</p>
-                        <img src="/source/img/contacts/step5.png" alt="">
+                        <img src="source/img/contacts/step5.png" alt="">
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">6. Ура! Мы пришли!</p>
-                        <img src="/source/img/contacts/step6.png" alt="">
+                        <img src="source/img/contacts/step6.png" alt="">
                     </div>
                 </div>
             </div>
