--- a/index.html
+++ b/index.html
@@ -25,27 +25,32 @@
                     <a href="#contacts">Контакты</a>
                 </div>
             </nav>
-            <nav class="menu-burger">
+            <img class="burger-img" id="burger-img" src="source/img/header/burger.svg" alt="img">
+            <div class="burger" id="burger">
+                <nav class="burger-menu close-burger-menu">
                     <a href="#photo-for-documents">Фото на документы</a>
                     <a href="#polygraphy">Полиграфия</a>
                     <a href="#print">Печать фото и проявка плёнки</a>
                     <a href="#accessories">Аксессуары</a>
                     <a href="#recovery">Восстановление и отцифровка</a>
                     <a href="#contacts">Контакты</a>
-            </nav>
+                </nav>
+                <img class="close-burger-menu burger-cross" src="source/img/header/cross.svg" alt="img">
+            </div>
             <div class="logo">
                 <p class="title">Фотосалон Фуджи</p>
                 <p>Брянск, Центральный дом быта, 2 этаж</p>
             </div>
         </div>
     </header>
-    <main>
+    <main class="close-burger-menu">
         <section class="about-us">
             <div class="about-us-content">
                 <div class="about-us-content-main">
                     <h2 class="about-us-content-main-text1">
                         Весь спектр фотоуслуг в одном магазине
                     </h2>
+                    <img class="about-us-planshet" src="source/img/about-us/about-us-planshet.png" alt="">
                     <p class="about-us-content-main-text2">
                         Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам - мы сфотографируем вас на документы, проявим фото на настоящей фотобумаге, нанесём изображение на дерево, отцифруем старые видеокассеты, и это ещё не всё!
                     </p>
