--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                         Весь спектр фотоуслуг в одном магазине
                     </h2>
                     <img class="about-us-planshet" src="source/img/about-us/about-us-planshet.png" alt="">
+                    <img class="about-us-mobile" src="source/img/about-us/about-us-mobile.png" alt="">
                     <p class="about-us-content-main-text2">
                         Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам - мы сфотографируем вас на документы, проявим фото на настоящей фотобумаге, нанесём изображение на дерево, отцифруем старые видеокассеты, и это ещё не всё!
                     </p>
@@ -152,15 +153,15 @@
                 <h3 class="block-content-title">Полиграфия</h3>
                 <div class="block-cards">
                     <div class="polygraphy-card">
-                        <img class="polygraphy-card-img" src="/source/img/polirgaphy/cap.png" alt="" />
+                        <img class="polygraphy-card-img" src="source/img/polirgaphy/cap.png" alt="" />
                         <p class="polygraphy-card-text">Печать на кружках</p>
                     </div>
                     <div class="polygraphy-card">
-                        <img class="polygraphy-card-img" src="/source/img/polirgaphy/wood.png" alt="" />
+                        <img class="polygraphy-card-img" src="source/img/polirgaphy/wood.png" alt="" />
                         <p class="polygraphy-card-text">Печать на дереве</p>
                     </div>
                     <div class="polygraphy-card">
-                        <img class="polygraphy-card-img" src="/source/img/polirgaphy/short.png" alt="" />
+                        <img class="polygraphy-card-img" src="source/img/polirgaphy/short.png" alt="" />
                         <p class="polygraphy-card-text">Печать на футболках</p>
                     </div>
                 </div>
