--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <div class="photo-for-documents-card">
                         <img class="photo-for-documents-card-img" src="source/img/photo-for-documents/unknown.png" alt="img" />
                         <div class="photo-for-documents-card-text">
-                            <p>Сделаем фото вашего формата</p>
+                            <p>Сделаем фото <br>вашего формата</p>
                         </div>
                     </div>
                 </div>
