правки по копирайту

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
                     <img class="about-us-planshet" src="source/img/about-us/about-us-planshet.png" alt="">
                     <img class="about-us-mobile" src="source/img/about-us/about-us-mobile.png" alt="">
                     <p class="about-us-content-main-text2">
-                        Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам - мы сфотографируем вас на документы, проявим фото на настоящей фотобумаге, нанесём изображение на дерево, отцифруем старые видеокассеты, и это ещё не всё!
+                        Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам —
+                         мы сфотографируем вас на документы, проявим фото на настоящей 
+                         фотобумаге, нанесём изображение на дерево, отцифруем старые 
+                         видеокассеты, и это ещё не всё!
                     </p>
                     <a href="#photo-for-documents" class="services-view">Обзор услуг</a>
                 </div>
@@ -116,7 +119,11 @@
                 <h2 class="block-content-title">Печать и проявка плёнки</h2>
                 <div class="print-content-top">
                     <p class="print-content-top-text">
-                        Фотопечать умерла? - Нет! Всё больше молодёжи приходит к нам за реальными фото, да ещё и с плёнки! Вспомните, как, придя к кому-то в гости, смотрели фотоальбом. Это же целое действо! Приятное занятие, за которым можно провести время с друзьями и близкими.
+                        Фотопечать умерла? — Нет! Всё больше молодёжи 
+                        приходит к нам за реальными фото, да ещё и с 
+                        плёнки! Вспомните, как смотрели в гостях чей-то фотоальбом.
+                         Это же целое действо! Приятное занятие, за которым можно провести 
+                        время с друзьями и близкими.
                     </p>
                     <div class="print-content-top-card">
                         <img class="print-content-top-card-img" src="source/img/print/print-machine.png" alt="img" />
@@ -133,8 +140,9 @@
                         </div>
                     </div>
                     <p class="print-content-bottom-text">
-                        Мы печатаем фото в специальной фотолаболатории с помощью обородувания японской компании <span>Fujifilm</span>. Краска сочная, стойкая и не выгорает. То что нужно, чтобы сохранить память на века, ведь живое фото надежнее цифрового
-                        носителя. Не забывайте время от времени сохранять все самые важные моменты вашей жизни на настоящей фотографии, а мы вам в этом поможем.
+                        Мы печатаем фото в специальной фотолаболатории с помощью японского обородувания компании <span>Fujifilm</span>. 
+                        Краска сочная и не выгорает. То что нужно, чтобы сохранить память надолго, ведь живое фото надежнее цифрового
+                        носителя. Не забывайте время от времени сохранять все самые важные моменты вашей жизни на настоящей фотографии, а мы вам в этом поможем!
                     </p>
                 </div>
             </div>
@@ -143,7 +151,7 @@
             <div class="block-content">
                 <h3 class="block-content-title">Восстановление и отцифровка</h3>
                 <p class="block-content-text">
-                    Восстановим старые фото и отцифруем видеокассеты.
+                    Принимаем заказы на восстановление старых фото и отцифрку видеокассет.
                 </p>
                 <img class="recovery-img" src="source/img/recovery/recovery.png" alt="img" />
             </div>
@@ -151,6 +159,9 @@
         <section class="block polygraphy" id="polygraphy">
             <div class="block-content">
                 <h3 class="block-content-title">Полиграфия</h3>
+                <p class="block-content-text">
+                    Печатаем не только на бумаге...
+                </p>
                 <div class="block-cards">
                     <div class="polygraphy-card">
                         <img class="polygraphy-card-img" src="source/img/polirgaphy/cap.png" alt="" />
@@ -219,30 +230,30 @@
                 <p class="contacts-text">Дом быта большой... Как найти наш магазин? Держите гайд:</p>
                 <div class="road">
                     <div class="contacts-card">
-                        <img src="source/img/contacts/step1.png" alt="">
-                        <p class="contacts-card-text">1. Заходим в Дом быта</p>
+                        <img src="source/img/contacts/step1.png" alt="img">
+                        <p class="contacts-card-text">1. Заходим</p>
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">2. Перед Спортландией <br> - налево</p>
 
-                        <img src="source/img/contacts/step2.png" alt="">
+                        <img src="source/img/contacts/step2.png" alt="img">
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">3. Поднимаемся <br>по лестнице</p>
 
-                        <img src="source/img/contacts/step3.png" alt="">
+                        <img src="source/img/contacts/step3.png" alt="img">
                     </div>
                     <div class="contacts-card">
-                        <p class="contacts-card-text">4. Идём к коридору</p>
-                        <img src="source/img/contacts/step4.png" alt="">
+                        <p class="contacts-card-text">4. Поднявшись, направо <br>и сразу налево</p>
+                        <img src="source/img/contacts/step4.png" alt="img">
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">5. Проходим коридор</p>
-                        <img src="source/img/contacts/step5.png" alt="">
+                        <img src="source/img/contacts/step5.png" alt="img">
                     </div>
                     <div class="contacts-card">
                         <p class="contacts-card-text">6. Ура! Мы пришли!</p>
-                        <img src="source/img/contacts/step6.png" alt="">
+                        <img src="source/img/contacts/step6.png" alt="img">
                     </div>
                 </div>
             </div>
