--- a/index.html
+++ b/index.html
@@ -145,26 +145,31 @@
                         носителя. Не забывайте время от времени сохранять все самые важные моменты вашей жизни на настоящей фотографии, а мы вам в этом поможем!
                     </p>
                 </div>
+                <p class="block-content-text">Форматы и цены:</p>
                 <div class="block-cards">
                     <div class="print-card">
-                        <img class="print-card-img" src="source/img/print/10x15.png" alt="" />
+                        <img class="print-card-img" src="source/img/print/10x15.png" alt="img" />
                         <p class="print-card-text">10x15<br>18 руб</p>
                     </div>
                     <div class="print-card">
-                        <img class="print-card-img" src="source/img/print/15x21.png" alt="" />
+                        <img class="print-card-img" src="source/img/print/15x21.png" alt="img" />
                         <p class="print-card-text">15x21<br>35 руб</p>
                     </div>
                     <div class="print-card">
-                        <img class="print-card-img" src="source/img/print/21x30.png" alt="" />
+                        <img class="print-card-img" src="source/img/print/21x30.png" alt="img" />
                         <p class="print-card-text">21x30<br>70 руб</p>
                     </div>
                     <div class="print-card">
-                        <img class="print-card-img" src="source/img/print/30x40.png" alt="" />
+                        <img class="print-card-img" src="source/img/print/30x40.png" alt="img" />
                         <p class="print-card-text">30x40<br>180 руб</p>
                     </div>
                     <div class="print-card">
-                        <img class="print-card-img" src="source/img/print/30x45.png" alt="" />
+                        <img class="print-card-img" src="source/img/print/30x45.png" alt="img" />
                         <p class="print-card-text">30x45<br>200 руб</p>
+                    </div>
+                    <div class="print-card">
+                        <img class="print-card-img" src="source/img/print/film.png" alt="img" />
+                        <p class="print-card-text">Проявка плёнки<br>260 руб</p>
                     </div>
                 </div>
             </div>
