--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         </section>
         <section class="block recovery" id="recovery">
             <div class="block-content">
-                <h3 class="block-content-title">Восстановление и отцифровка</h3>
+                <h3 class="block-content-title">Восстановление и оцифровка</h3>
                 <p class="block-content-text">
-                    Принимаем заказы на восстановление старых фото и отцифрку видеокассет.
+                    Принимаем заказы на восстановление старых фото и оцифрку видеокассет.
                 </p>
                 <img class="recovery-img" src="source/img/recovery/recovery.png" alt="img" />
             </div>
