--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <a href="#accessories">Аксессуары</a>
                 </div>
                 <div>
-                    <a href="#recovery">Восстановление и отцифровка</a>
+                    <a href="#recovery">Восстановление и оцифровка</a>
                     <a href="#contacts">Контакты</a>
                 </div>
             </nav>
@@ -32,7 +32,7 @@
                     <a href="#polygraphy">Полиграфия</a>
                     <a href="#print">Печать фото и проявка плёнки</a>
                     <a href="#accessories">Аксессуары</a>
-                    <a href="#recovery">Восстановление и отцифровка</a>
+                    <a href="#recovery">Восстановление и оцифровка</a>
                     <a href="#contacts">Контакты</a>
                 </nav>
                 <img class="close-burger-menu burger-cross" src="source/img/header/cross.svg" alt="img">
@@ -55,7 +55,7 @@
                     <p class="about-us-content-main-text2">
                         Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам —
                          мы сфотографируем вас на документы, проявим фото на настоящей 
-                         фотобумаге, нанесём изображение на дерево, отцифруем старые 
+                         фотобумаге, нанесём изображение на дерево, оцифруем старые 
                          видеокассеты, и это ещё не всё!
                     </p>
                     <a href="#photo-for-documents" class="services-view">Обзор услуг</a>
