--- a/index.html
+++ b/index.html
@@ -90,25 +90,25 @@
             Наши специалисты сделают фото за 5 минут на любые виды документов:
           </p>
           <div class="block-cards">
-            <div class="photo-for-documents-card">
+            <div class="block-card">
               <img
-                class="photo-for-documents-card-img"
+                class="block-long-card-img"
                 src="source/img/photo-for-documents/pasport-rf.png"
                 alt="img"
               />
-              <div class="photo-for-documents-card-text">
-                <br />
+              <div class="block-long-card-text">
+                <!-- <br /> -->
                 <h3>Паспорт РФ</h3>
                 <p>4шт - 350р</p>
               </div>
             </div>
-            <div class="photo-for-documents-card">
+            <div class="block-card">
               <img
-                class="photo-for-documents-card-img"
+                class="block-long-card-img"
                 src="source/img/photo-for-documents/zagran.png"
                 alt="img"
               />
-              <div class="photo-for-documents-card-text">
+              <div class="block-long-card-text">
                 <h3>Загранпаспорт</h3>
                 <p>
                   2шт - 300р <br />
@@ -117,13 +117,13 @@
                 </p>
               </div>
             </div>
-            <div class="photo-for-documents-card">
+            <div class="block-card">
               <img
-                class="photo-for-documents-card-img"
+                class="block-long-card-img"
                 src="source/img/photo-for-documents/three-four.png"
                 alt="img"
               />
-              <div class="photo-for-documents-card-text">
+              <div class="block-long-card-text">
                 <h3>Фото 3x4</h3>
                 <p>
                   3шт - 250р <br />
@@ -131,13 +131,13 @@
                 </p>
               </div>
             </div>
-            <div class="photo-for-documents-card">
+            <div class="block-card">
               <img
-                class="photo-for-documents-card-img"
+                class="block-long-card-img"
                 src="source/img/photo-for-documents/four-six.png"
                 alt="img"
               />
-              <div class="photo-for-documents-card-text">
+              <div class="block-long-card-text">
                 <h3>Фото 4x6</h3>
                 <p>
                   2шт - 300р <br />
@@ -146,13 +146,13 @@
                 </p>
               </div>
             </div>
-            <div class="photo-for-documents-card">
+            <div class="block-card">
               <img
-                class="photo-for-documents-card-img"
+                class="block-long-card-img"
                 src="source/img/photo-for-documents/unknown.png"
                 alt="img"
               />
-              <div class="photo-for-documents-card-text">
+              <div class="block-long-card-text">
                 <p>Сделаем фото <br />вашего формата</p>
               </div>
             </div>
@@ -202,53 +202,53 @@
           </div>
           <p class="block-content-text">Форматы и цены:</p>
           <div class="block-cards">
-            <div class="print-card">
+            <div class="block-card">
               <img
-                class="print-card-img"
+                class="block-card-img"
                 src="source/img/print/10x15.png"
                 alt="img"
               />
-              <p class="print-card-text">10x15<br />18 руб</p>
+              <p class="block-card-text">10x15<br />18 руб</p>
             </div>
-            <div class="print-card">
+            <div class="block-card">
               <img
-                class="print-card-img"
+                class="block-card-img"
                 src="source/img/print/15x21.png"
                 alt="img"
               />
-              <p class="print-card-text">15x21<br />35 руб</p>
+              <p class="block-card-text">15x21<br />35 руб</p>
             </div>
-            <div class="print-card">
+            <div class="block-card">
               <img
-                class="print-card-img"
+                class="block-card-img"
                 src="source/img/print/21x30.png"
                 alt="img"
               />
-              <p class="print-card-text">21x30<br />70 руб</p>
+              <p class="block-card-text">21x30<br />70 руб</p>
             </div>
-            <div class="print-card">
+            <div class="block-card">
               <img
-                class="print-card-img"
+                class="block-card-img"
                 src="source/img/print/30x40.png"
                 alt="img"
               />
-              <p class="print-card-text">30x40<br />180 руб</p>
+              <p class="block-card-text">30x40<br />180 руб</p>
             </div>
-            <div class="print-card">
+            <div class="block-card">
               <img
-                class="print-card-img"
+                class="block-card-img"
                 src="source/img/print/30x45.png"
                 alt="img"
               />
-              <p class="print-card-text">30x45<br />200 руб</p>
+              <p class="block-card-text">30x45<br />200 руб</p>
             </div>
-            <div class="print-card">
+            <div class="block-card">
               <img
-                class="print-card-img"
+                class="block-card-img"
                 src="source/img/print/film.png"
                 alt="img"
               />
-              <p class="print-card-text">Проявка плёнки<br />260 руб</p>
+              <p class="block-card-text">Проявка плёнки<br />260 руб</p>
             </div>
           </div>
         </div>
@@ -272,29 +272,29 @@
           <h3 class="block-content-title">Полиграфия</h3>
           <p class="block-content-text">Печатаем не только на бумаге...</p>
           <div class="block-cards">
-            <div class="polygraphy-card">
+            <div class="block-card">
               <img
-                class="polygraphy-card-img"
+                class="block-card-img"
                 src="source/img/polirgaphy/cap.png"
                 alt=""
               />
-              <p class="polygraphy-card-text">Печать на кружках</p>
+              <p class="block-card-text">Печать на кружках</p>
             </div>
-            <div class="polygraphy-card">
+            <div class="block-card">
               <img
-                class="polygraphy-card-img"
+                class="block-card-img"
                 src="source/img/polirgaphy/wood.png"
                 alt=""
               />
-              <p class="polygraphy-card-text">Печать на дереве</p>
+              <p class="block-card-text">Печать на дереве</p>
             </div>
-            <div class="polygraphy-card">
+            <div class="block-card">
               <img
-                class="polygraphy-card-img"
+                class="block-card-img"
                 src="source/img/polirgaphy/short.png"
                 alt=""
               />
-              <p class="polygraphy-card-text">Печать на футболках</p>
+              <p class="block-card-text">Печать на футболках</p>
             </div>
           </div>
         </div>
@@ -306,29 +306,29 @@
             Вы также можете приобрести у нас множество товаров в сфере фото:
           </p>
           <div class="block-cards">
-            <div class="accessories-card">
+            <div class="block-card">
               <img
-                class="accessories-card-img"
+                class="block-card-img"
                 src="source/img/accessories/alboms.png"
                 alt=""
               />
-              <p class="accessories-card-text">Альбомы</p>
+              <p class="block-card-text">Альбомы</p>
             </div>
-            <div class="accessories-card">
+            <div class="block-card">
               <img
-                class="accessories-card-img"
+                class="block-card-img"
                 src="source/img/accessories/battaries.png"
                 alt=""
               />
-              <p class="accessories-card-text">Батарейки</p>
+              <p class="block-card-text">Батарейки</p>
             </div>
-            <div class="accessories-card">
+            <div class="block-card">
               <img
-                class="accessories-card-img"
+                class="block-card-img"
                 src="source/img/accessories/photoframe.png"
                 alt=""
               />
-              <p class="accessories-card-text">Фоторамки</p>
+              <p class="block-card-text">Фоторамки</p>
             </div>
           </div>
         </div>
@@ -403,36 +403,36 @@
             Дом быта большой... Как найти наш магазин? Держите гайд:
           </p>
           <div class="road">
-            <div class="contacts-card">
-              <img src="source/img/contacts/step1.png" alt="img" />
-              <p class="contacts-card-text">1. Заходим</p>
+            <div class="block-card contacts-card">
+              <img class="block-card-img" src="source/img/contacts/step1.png" alt="img" />
+              <p class="block-card-text">1. Заходим</p>
             </div>
-            <div class="contacts-card">
-              <p class="contacts-card-text">
+            <div class="block-card contacts-card">
+              <p class="block-card-text">
                 2. Перед Спортландией <br />
                 - налево
               </p>
 
-              <img src="source/img/contacts/step2.png" alt="img" />
+              <img class="block-card-img" src="source/img/contacts/step2.png" alt="img" />
             </div>
-            <div class="contacts-card">
-              <p class="contacts-card-text">3. Поднимаемся <br />по лестнице</p>
+            <div class="block-card contacts-card">
+              <p class="block-card-text">3. Поднимаемся <br />по лестнице</p>
 
-              <img src="source/img/contacts/step3.png" alt="img" />
+              <img class="block-card-img" src="source/img/contacts/step3.png" alt="img" />
             </div>
-            <div class="contacts-card">
-              <p class="contacts-card-text">
+            <div class="block-card contacts-card">
+              <p class="block-card-text">
                 4. Поднявшись, направо <br />и сразу налево
               </p>
-              <img src="source/img/contacts/step4.png" alt="img" />
+              <img class="block-card-img" src="source/img/contacts/step4.png" alt="img" />
             </div>
-            <div class="contacts-card">
-              <p class="contacts-card-text">5. Проходим коридор</p>
-              <img src="source/img/contacts/step5.png" alt="img" />
+            <div class="block-card contacts-card">
+              <p class="block-card-text">5. Проходим коридор</p>
+              <img class="block-card-img" src="source/img/contacts/step5.png" alt="img" />
             </div>
-            <div class="contacts-card">
-              <p class="contacts-card-text">6. Ура! Мы пришли!</p>
-              <img src="source/img/contacts/step6.png" alt="img" />
+            <div class="block-card contacts-card">
+              <p class="block-card-text">6. Ура! Мы пришли!</p>
+              <img class="block-card-img" src="source/img/contacts/step6.png" alt="img" />
             </div>
           </div>
         </div>
