--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
           <div class="block-cards">
             <div class="block-card">
               <img
-                class="block-long-card-img"
+                class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/pasport-rf.png"
                 alt="img"
               />
-              <div class="block-long-card-text">
-                <!-- <br /> -->
+              <div class="block-card-text block-long-card-text">
+                <br />
                 <h3>Паспорт РФ</h3>
                 <p>4шт - 350р</p>
               </div>
             </div>
             <div class="block-card">
               <img
-                class="block-long-card-img"
+                class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/zagran.png"
                 alt="img"
               />
-              <div class="block-long-card-text">
+              <div class="block-card-text block-long-card-text">
                 <h3>Загранпаспорт</h3>
                 <p>
                   2шт - 300р <br />
@@ -119,11 +119,11 @@
             </div>
             <div class="block-card">
               <img
-                class="block-long-card-img"
+                class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/three-four.png"
                 alt="img"
               />
-              <div class="block-long-card-text">
+              <div class="block-card-text block-long-card-text">
                 <h3>Фото 3x4</h3>
                 <p>
                   3шт - 250р <br />
@@ -133,11 +133,11 @@
             </div>
             <div class="block-card">
               <img
-                class="block-long-card-img"
+                class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/four-six.png"
                 alt="img"
               />
-              <div class="block-long-card-text">
+              <div class="block-card-text block-long-card-text">
                 <h3>Фото 4x6</h3>
                 <p>
                   2шт - 300р <br />
@@ -148,11 +148,12 @@
             </div>
             <div class="block-card">
               <img
-                class="block-long-card-img"
+                class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/unknown.png"
                 alt="img"
               />
-              <div class="block-long-card-text">
+              <div class="block-card-text block-long-card-text">
+                <br>
                 <p>Сделаем фото <br />вашего формата</p>
               </div>
             </div>
@@ -162,7 +163,7 @@
       <section class="block print" id="print">
         <div class="block-content">
           <h2 class="block-content-title">Печать и проявка плёнки</h2>
-          <div class="print-content-top">
+          <!-- <div class="print-content-top">
             <p class="print-content-top-text">
               Фотопечать умерла? — Нет! Всё больше молодёжи приходит к нам за
               реальными фото, да ещё и с плёнки! Вспомните, как смотрели в
@@ -179,7 +180,7 @@
                 <p>На этой машине мы печатаем фото</p>
               </div>
             </div>
-          </div>
+          </div>-->
           <div class="print-content-bottom">
             <div class="print-content-bottom-card">
               <img
@@ -199,7 +200,7 @@
               сохранять все самые важные моменты вашей жизни на настоящей
               фотографии, а мы вам в этом поможем!
             </p>
-          </div>
+          </div> 
           <p class="block-content-text">Форматы и цены:</p>
           <div class="block-cards">
             <div class="block-card">
