Дополнил данными блок "Восстановление и оцифровка"

--- a/index.html
+++ b/index.html
@@ -261,11 +261,29 @@
             Принимаем заказы на восстановление старых фото и оцифрку
             видеокассет.
           </p>
-          <img
-            class="recovery-img"
-            src="source/img/recovery/recovery.png"
-            alt="img"
-          />
+          <div class="block-cards">
+            <div class="block-card recovery-card">
+              <img
+                class="block-card-img recovery-card-img"
+                src="source/img/recovery/soldier1.png"
+                alt=""
+              />
+            </div>
+            <div class="block-card recovery-card">
+              <img
+                class="block-card-img recovery-card-img"
+                src="source/img/recovery/child.png"
+                alt=""
+              />
+            </div>
+            <div class="block-card recovery-card">
+              <img
+                class="block-card-img recovery-card-img"
+                src="source/img/recovery/soldier2.png"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
       </section>
       <section class="block polygraphy" id="polygraphy">
